--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
